--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+arrayvec = "0.7.2"
 bitvec = "0.22.3"
+colored = "2.0.0"
 itertools = "0.10.1"
 lazy_static = "1.4.0"
+
+[features]
